モデル読み込み、描画可能、テクスチャー読み込み可能

--- a/DirectX12.vcxproj
+++ b/DirectX12.vcxproj
@@ -148,14 +148,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="NewEngine\DataOperator.cpp" />
     <ClCompile Include="NewEngine\Developer\Collision\Collider.cpp" />
     <ClCompile Include="NewEngine\Developer\Collision\ColliderManager.cpp" />
     <ClCompile Include="NewEngine\Developer\Collision\Collision.cpp" />
     <ClCompile Include="NewEngine\Developer\Component\Blend.cpp" />
     <ClCompile Include="NewEngine\Developer\Component\ComponentManager.cpp" />
     <ClCompile Include="NewEngine\Developer\Component\Material.cpp" />
-    <ClCompile Include="NewEngine\Developer\Component\ModelData.cpp" />
+    <ClCompile Include="NewEngine\Developer\Component\Model.cpp" />
     <ClCompile Include="NewEngine\Developer\Component\Tag.cpp" />
     <ClCompile Include="NewEngine\Developer\Component\Texture.cpp" />
     <ClCompile Include="NewEngine\Developer\Component\Transform.cpp" />
@@ -173,13 +172,10 @@
     <ClCompile Include="NewEngine\Developer\Object\2D\Sprite.cpp" />
     <ClCompile Include="NewEngine\Developer\Object\3D\Line.cpp" />
     <ClCompile Include="NewEngine\Developer\Object\3D\Object3D.cpp" />
-    <ClCompile Include="NewEngine\Developer\Object\3D\Emitter.cpp" />
     <ClCompile Include="NewEngine\Developer\Object\Other\DebugCamera.cpp" />
     <ClCompile Include="NewEngine\Developer\Object\Other\DrawManager.cpp" />
     <ClCompile Include="NewEngine\Developer\Object\Other\GameObject.cpp" />
-    <ClCompile Include="NewEngine\Developer\Object\Other\ObjectManager.cpp" />
     <ClCompile Include="NewEngine\Developer\Object\Other\ViewProjection.cpp" />
-    <ClCompile Include="NewEngine\Developer\Scene\Scene.cpp" />
     <ClCompile Include="NewEngine\Developer\Sound.cpp" />
     <ClCompile Include="NewEngine\Developer\Util\Color.cpp" />
     <ClCompile Include="NewEngine\Developer\Util\FrameRate.cpp" />
@@ -206,7 +202,6 @@
     <ClCompile Include="NewEngine\Render\Viewport.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="NewEngine\DataOperator.h" />
     <ClInclude Include="NewEngine\Developer\Collision\Collider.h" />
     <ClInclude Include="NewEngine\Developer\Collision\ColliderManager.h" />
     <ClInclude Include="NewEngine\Developer\Collision\Collision.h" />
@@ -214,7 +209,7 @@
     <ClInclude Include="NewEngine\Developer\Component\ComponentManager.h" />
     <ClInclude Include="NewEngine\Developer\Component\IComponent.h" />
     <ClInclude Include="NewEngine\Developer\Component\Material.h" />
-    <ClInclude Include="NewEngine\Developer\Component\ModelData.h" />
+    <ClInclude Include="NewEngine\Developer\Component\Model.h" />
     <ClInclude Include="NewEngine\Developer\Component\Tag.h" />
     <ClInclude Include="NewEngine\Developer\Component\Texture.h" />
     <ClInclude Include="NewEngine\Developer\Component\Transform.h" />
@@ -228,7 +223,6 @@
     <ClInclude Include="NewEngine\Developer\Math\Vec2.h" />
     <ClInclude Include="NewEngine\Developer\Math\Vec3.h" />
     <ClInclude Include="NewEngine\Developer\Math\Vec4.h" />
-    <ClInclude Include="NewEngine\Developer\Object\3D\Emitter.h" />
     <ClInclude Include="NewEngine\Developer\Object\3D\Line.h" />
     <ClInclude Include="NewEngine\Developer\Object\3D\Object3D.h" />
     <ClInclude Include="NewEngine\Developer\Object\Object2D\RenderTexture.h" />
@@ -236,9 +230,7 @@
     <ClInclude Include="NewEngine\Developer\Object\Other\DebugCamera.h" />
     <ClInclude Include="NewEngine\Developer\Object\Other\DrawManager.h" />
     <ClInclude Include="NewEngine\Developer\Object\Other\GameObject.h" />
-    <ClInclude Include="NewEngine\Developer\Object\Other\ObjectManager.h" />
     <ClInclude Include="NewEngine\Developer\Object\Other\ViewProjection.h" />
-    <ClInclude Include="NewEngine\Developer\Scene\Scene.h" />
     <ClInclude Include="NewEngine\Developer\Sound.h" />
     <ClInclude Include="NewEngine\Developer\Util\Color.h" />
     <ClInclude Include="NewEngine\Developer\Util\FrameRate.h" />
